Fixed hero image not stretching

--- a/app/assets/stylesheets/frontpage.scss
+++ b/app/assets/stylesheets/frontpage.scss
@@ -9,6 +9,8 @@ $break-tiny: 640px;
     z-index: 1;
     background-repeat: no-repeat;
     background-position: center;
+    background-size: cover;
+
 
     &__splash {
         position: absolute;
